--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
     <title>NARTH VAD3R MERCH {% block extra_title %}{% endblock %}</title>
 </head>
 <body class="container-fluid mt-5 pt-5" style="padding-bottom: 100px;" id="top">
-    <header class="container-fluid fixed-top" id="back-to-top">
+    <header class="container-fluid fixed-top">
         <!-- Top Navbar -->
         <div id="topnav" class="row bg-black py-lg-2 d-flex align-items-center">
             <!-- Left: My Account -->
