--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
             <div class="col-1 col-sm-3 d-flex justify-content-start text-center align-items-center">
                 <ul class="list-inline list-unstyled mb-0">
                     <li class="list-inline-item dropdown">
-                        <a class="account-icon text-red nav-link" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="account-icon text-red nav-link" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" aria-label="User account options">
                             <div class="text-center">
                                 <!-- Account Icon -->
                                 <i class="fa-solid fa-user-group"></i>
