--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
             <div class="col-1 col-sm-3 d-flex justify-content-start text-center align-items-center">
                 <ul class="list-inline list-unstyled mb-0">
                     <li class="list-inline-item dropdown">
-                        <a class="account-icon text-red nav-link" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" aria-label="My account">
+                        <a class="account-icon text-red nav-link" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" aria-label="account navigation">
                             <div class="text-center">
                                 <!-- Account Icon -->
                                 <i class="fa-solid fa-user-group"></i>
@@ -117,7 +117,7 @@
         <!-- Mobile Navbar -->
         <div class="row bg-black">
             <nav class="navbar navbar-expand-lg navbar-dark w-100">
-                <button class="navbar-toggler mx-auto mt-3" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler mx-auto mt-3" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="product navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="d-none d-lg-none d-md-none d-sm-flex w-100 text-center justify-content-center align-items-center">
