--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,6 @@
 
     <title>NARTH VAD3R MERCH {% block extra_title %}{% endblock %}</title>
 </head>
-<body class="container-fluid mt-5 pt-5" style="padding-bottom: 100px;" id="top">
     <header class="container-fluid fixed-top">
         <!-- Top Navbar -->
         <div id="topnav" class="row bg-black py-lg-2 d-flex align-items-center">
@@ -142,6 +141,7 @@
         </div>            
     </div>
 </header>
+<body>
 
 {% if messages %}
     <div class="message-container">
