Added minor changes to base.html for ui and ux

--- a/templates/base.html
+++ b/templates/base.html
@@ -141,7 +141,7 @@
         </div>            
     </div>
 </header>
-<body>
+<body class="container-fluid mt-5 pt-5" style="padding-bottom: 100px;" id="top">
 
 {% if messages %}
     <div class="message-container">
