Added minor changes to css, html templates for ux and ui

--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,7 @@
             </div>
 
            <!-- Center: Logo -->
-            <div class="col-10 col-sm-6 mx-auto text-center d-flex justify-content-center align-items-center">
+            <div class="col-10 col-sm- mx-auto text-center d-flex justify-content-center align-items-center main-logo">
                 <a href="{% url 'home' %}" class="nav-link main-logo-link">
                     <h2 class="nv-logo-text text-red my-1">
                         <!-- Responsive Logo Sizes -->
