--- a/static/css/base.css
+++ b/static/css/base.css
@@ -75,6 +75,11 @@ header {
     z-index: 1000;
 }
 
+.main-logo {
+    max-width: 50%;
+    margin: 0 auto; 
+}
+
 #topnav {
     background-color: #111;
     border-bottom: 1px solid #ff0000;
@@ -98,7 +103,7 @@ header {
     font-size: 1.8rem;
     font-weight: bold;
     letter-spacing: 2px;
-    text-shadow: 0 0 10px #fff;
+    text-shadow: 0 0 10px #868686;
     margin: auto;
 }
 
