--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -14,7 +14,7 @@
 
 {% block content %}
 <div class="overlay product-overlay"></div>
-<div class="container-fluid">
+<div class="container-fluid mt-5 pt-5">
     <div class="row">
         <!-- Product Image Section -->
         <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
