--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -6,7 +6,7 @@
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
 {% block content %}
-    <div class="container header-container py-5">
+    <div class="container header-container py-5 mt-5 pt-5">
         <div class="overlay"></div>
         <div class="row justify-content-center">
             <div class="col-12 col-md-6">
