Added minor changes to templates for ui and colour contrast

--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -10,7 +10,7 @@
         <div class="overlay"></div>
         <div class="row justify-content-center">
             <div class="col-12 col-md-6">
-                <div class="allauth-form-inner-content bg-dark text-white p-5 rounded-lg shadow-lg">
+                <div class="allauth-form-inner-content bg-black text-white p-5 rounded-lg shadow-lg">
                     <hr>
                     <h2 class="logo-font mb-4 text-danger">{% trans "Sign In" %}</h2>
                     <hr>
