--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -12,7 +12,7 @@
 
 {% block content %}
     <div class="overlay"></div>
-    <div class="container mb-2">
+    <div class="container mb-2 mt-5 pt-5">
         <div class="row">
             <div class="col">
                 <hr>
@@ -37,7 +37,7 @@
                             </thead>
 
                             {% for item in basket_items %}
-                                <tr class="bg-dark text-white">
+                                <tr class="bg-black text-white">
                                     <td class="p-3 w-25">
                                         <img class="img-fluid rounded" 
                                              src="{{ item.product.image.url }}" 
