--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -16,7 +16,7 @@
 
 {% block content %}
     <div class="overlay"></div>
-    <div class="container mt-5">
+    <div class="container mt-5 mp-5">
         <div class="row">
             <div class="col">
                 <hr>
