--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -17,7 +17,7 @@
 {% block content %}
     <div class="overlay"></div>
     <div class="container mt-5 mp-5">
-        <div class="row">
+        <div class="row mt-5 pt-5">
             <div class="col">
                 <hr>
                 <h2 class="logo-font mb-4">Checkout</h2>
