--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -103,12 +103,17 @@
                     </fieldset>
                     <fieldset class="px-3">
                         <legend class="fieldset-label text-black px-2 w-auto">Payment</legend>
-                        <div class="mb-3" id="card-element"></div>
+                        <p class="small text-muted">Enter your card details below:</p>
+                        <!-- Stripe Card Element -->
+                        <div id="card-element" class="form-control mb-3">
+                            <!-- Stripe Elements will create this input -->
+                        </div>
                         <!-- Used to display form errors -->
-                        <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
-                        <!-- Pass the client secret to the view so we can get the payment intent id -->
+                        <div id="card-errors" class="text-danger mb-3" role="alert"></div>
+                        <!-- Pass the client secret to the view -->
                         <input type="hidden" value="{{ client_secret }}" name="client_secret">
                     </fieldset>
+                    
 
                     <div class="submit-button text-right text-white mt-5 mb-2">                    
 						<a href="{% url 'view_basket' %}" class="btn btn-outline-black rounded-0 text-white">
